# AnotherMinecraftClone

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  compile_commands.json
content/shaders/: basic.frag  basic.vert
include/glad/: glad.h
src/: CMakeLists.txt  app.cpp  app.h  glad.c  main.cpp
src/Renderer/: IRenderer.h
src/Shader/: IShader.h  Shader.cpp  Shader.h
